# oor_benchmark

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.md  environment.yaml  pyproject.toml  test.ipynb
.github/workflows/: test.yaml
docs/: api.md  conf.py  developer_docs.md  requirements.txt
docs/notebooks/: example.ipynb
src/oor_benchmark/: __init__.py  api.py
src/oor_benchmark/datasets/: simulation.py  utils.py
src/oor_benchmark/methods/: _cna.py  _latent_embedding.py  _meld.py  scArches_cna.py  scArches_mappingQC.py  scArches_meld.py  scArches_milo.py  scVI_cna.py  scVI_meld.py  scVI_milo.py
src/oor_benchmark/metrics/: FDR_TPR_FPR.py  auprc.py  utils.py
tests/: test_basic.py  test_datasets_simulation.py  test_methods.py  test_methods_cna.py  test_methods_embedding.py  test_methods_mappingQC.py  test_methods_meld.py  test_methods_milo.py  test_metrics.py
